Update De Pages

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,14 @@
-<div class="cuerpo"><div class="about-container container">
+<main class="AboutBody">
+    <section class="about-hero">
+      <div class="container">
+        <div class="about-hero-content">
+          <h1>Nuestro Personal</h1>
+          <p>Conoce a nuestro equipo de profesionales dedicados a brindar excelencia académica y administrativa</p>
+        </div>
+        
+      </div>
+    </section>
+  <div class="about-container">
     <!-- Pestañas -->
     <div class="tabs">
       <button (click)="setTab('teachers')" [class.active]="activeTab==='teachers'">Profesores</button>
@@ -43,4 +53,4 @@
       </div>
     </div>
   </div>
-</div>
+</main>
