--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,4 +1,6 @@
-<div class="cuerpo">
+
+
+<main class="CalendarBody">
 <section class="calendar-hero">
   <div class="container">
     <div class="calendar-hero-content">
@@ -8,8 +10,10 @@
   </div>
 </section>
 <div class="calendar-container">
-  <iframe src="https://meet.brevo.com/franco-vivas/reserva" title="Calendario de Reservas"></iframe>
+  <iframe 
+  src="https://meet.brevo.com/franco-vivas/reserva" 
+  title="Calendario de Reservas" 
+  scrolling="no">
+</iframe>
 </div>
-</div>
-<!-- Controles del calendario -->
-
+</main>
