--- a/src/app/careers/careers.component.html
+++ b/src/app/careers/careers.component.html
@@ -1,7 +1,4 @@
-<div class="Cuerpo">
-
-
-<main class="careers">
+<main class="CarrersBody">
   <section class="careers-hero">
     <div class="container">
       <div class="careers-hero-content">
@@ -154,4 +151,3 @@
     </div>
   </section>
 </main>
-</div>
