--- a/src/app/institucion/institucion.component.html
+++ b/src/app/institucion/institucion.component.html
@@ -1,10 +1,6 @@
+<main class="InstitucionBody">
+
 <main class="about">
-
-  <!-- Hero -->
-
-
-  <!-- Carrusel -->
-
   
   <section class="about-hero">
     <div class="container">
@@ -55,4 +51,5 @@
       </div>
     </div>
   </section>
+</main>
 </main>
