--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -1,21 +1,58 @@
 /* Variables de color (puedes definirlas en :root para usarlas globalment
 /* Container general */
+.CalendarBody {
+  min-height: 100vh;
+
+  overflow: hidden; /* para que el blur no salga del contenedor */
+  z-index: 0;
+}
+
+
+.CalendarBody::before{
+
+  content: "";
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: url('../../assets/images/FondoReservas.png') center center/cover no-repeat;
+  filter: blur(1px) brightness(0.3) ; /* blur para desenfoque, brightness para opacidad */
+  opacity: 0.7; /* controla la opacidad */
+  z-index: -1;
+  transform: scale(1.1);
+}
+
 .container {
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 0 1rem;
-}
 
-.calendar-container {
-  width: 100%;
-  height: 100vh; /* Ocupa toda la pantalla */
-}
+    color: var(--blanco);
+    padding: 6rem 0 0 0;
+    text-align: center;
+  }
+  
+  .container h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    color: var(--blanco);
+  }
+  
+  .container p {
+    font-size: 1.2rem;
+    opacity: 0.9;
+    max-width: 600px;
+    margin: 0 auto;
+  }
 
-iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
+
+  .calendar-container {
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .calendar-container iframe {
+    width: 100%;
+    height: 1500px; /* ajustá según el contenido */
+    border: none;
+    margin-bottom: -950px;
+  }
+  
 /* Hero Section */
 
 /* Responsive */
