--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,6 @@
 <!-- Hero Section -->
+
+<main class="ContactosBody">
 <section class="contact-hero">
   <div class="container">
     <div class="contact-hero-content">
@@ -189,3 +191,4 @@
     </div>
   </div>
 </section>
+</main>
