Update De Pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <p class="hero-subtitle">{{ heroSubtitle }}</p>
         <div class="hero-actions">
           <a routerLink="/careers" class="btn">Ver Carreras</a>
-          <a routerLink="/calendar" class="btn btn-secondary">Reservar Aula</a>
+          <a routerLink="/reservar" class="btn btn-secondary">Reservar Aula</a>
         </div>
       </div>
 
