Cambios de diseño, agregacion de color municipal y agregacion de cuantas personas van al aula

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -11,9 +11,7 @@
 </section>
 <div class="calendar-container">
   <iframe 
-  src="https://meet.brevo.com/franco-vivas/reserva" 
-  title="Calendario de Reservas" 
-  scrolling="no">
-</iframe>
+  src="https://meet.brevo.com/reservarauladolores/reserva" 
+  title="Calendario de Reservas"></iframe>
 </div>
 </main>
