--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -42,21 +42,40 @@
 
 
   .calendar-container {
-    width: 100%;
+    border-radius: 15px;
+    background-color: var(--blanco);
+    width: 90%;       /* Ajusta el ancho del fondo */
+    max-width: 1500px;
+    max-height: 1000px; /* Opcional: limitar tamaño máximo */
+    padding: 10px;    /* Espacio entre el iframe y el borde del fondo */
+    margin: 0 auto;   /* Centrar el contenedor */
     overflow: hidden;
-  }
+}
   
   .calendar-container iframe {
+    background-color: var(--blanco) !important;
     width: 100%;
     height: 1500px; /* ajustá según el contenido */
     border: none;
-    margin-bottom: -950px;
+
   }
   
 /* Hero Section */
 
 /* Responsive */
 @media (max-width: 900px) {
+
+  .calendar-container{
+    height: 100%;
+  }
+
+  .calendar-container iframe{
+    height: 100%;
+  }
+
+  .CalendarBody{
+    padding: 6rem 0;
+  }
   .calendar-controls {
     flex-direction: column;
     gap: 1rem;
