--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -13,7 +13,7 @@ padding: 16px;
     background-color: transparent;
 
     transition: var(--transition);
-    border-bottom: black solid 3px;
+    border-bottom: var(--color-principal) solid 3px;
 
   }
 
@@ -64,7 +64,7 @@ font-size: 20px;
 
 .nav-list a:hover,
 .nav-list a.active {
-  color:black;
+  color:var(--color-principal);
 }
 
 .nav-list a.active::after {
@@ -74,7 +74,7 @@ font-size: 20px;
   left: 0;
   right: 0;
   height: 2px;
-  background-color: var(--azul-claro);
+  background-color: var(--color-principal);
 }
 
 .admin-link {
@@ -109,7 +109,7 @@ font-size: 20px;
 .menu-toggle span {
   width: 25px;
   height: 3px;
-  background-color: var(--azul-oscuro);
+  background-color: var(--color-principal);
   transition: all 0.3s ease;
   border-radius: 2px;
 }
@@ -119,6 +119,7 @@ font-size: 20px;
 /* Responsive */
 @media (max-width: 768px) {
 
+  
   .boton-cerrar {
     position: absolute;
     top: 10px;
@@ -136,7 +137,8 @@ font-size: 20px;
     top: 100%;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 56, 0.918);
+    background-color: var(--color-principal);
+    border: solid 2px black;
     transform: translateY(-100%);
     transition: transform 0.3s ease;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -161,10 +163,12 @@ font-size: 20px;
     color:white;
     display: block;
     padding: 1rem 2rem;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.603);
   }
 
-  .nav-list a:hover {
+    .nav-list a:hover,
+.nav-list a.active {
+  color: black;
     background-color: rgba(255, 255, 255, 0.1);
   }
 
