--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -23,7 +23,7 @@
         -->
       
                  <ul class="nav-list">
-           <li><a routerLink="/" routerLinkActive="active" (click)="closeMenu()">Inicio</a></li>
+           <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"  (click)="closeMenu()">Inicio</a></li>
            <li><a routerLink="/institucion" routerLinkActive="active" (click)="closeMenu()">Institución</a></li>
            <li><a routerLink="/careers" routerLinkActive="active" (click)="closeMenu()">Carreras</a></li>
            <li><a routerLink="/reservar" routerLinkActive="active" (click)="closeMenu()">Reservar</a></li>
