--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -81,8 +81,8 @@
                     <div class="form-group">
             <label for="phone" class="form-label">Tu número de telefono *</label>
             <input 
-              type="email" 
-              id="email" 
+              type="tel" 
+              id="phone" 
               [(ngModel)]="contactForm.phone" 
               name="phone"
               class="form-input"
