--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -11,16 +11,16 @@
     <div class="box__footer">
         <h2>Contacto</h2>
         <a href="/contact">Contactanos</a>
-        <a href="https://institutosparroquiales.com/">Email</a>
-        <a href="https://www.instagram.com/franciscodepaularoblessuperior/">Teléfono</a>
+        <a href="mailto:{{ contactInfo.email }}" target="_blank">Email</a>
+        <a href="https://wa.me/2245445999" >Teléfono</a>
         <a href="https://maps.app.goo.gl/ejjRrpouddoxWKk16">Ubicacion</a>
     </div>
 
     <div class="box__footer">
         <h2>Enlaces rápidos</h2>
-        <a href="/about">Nosotros</a>
+        <a href="/institucion">Nosotros</a>
         <a href="/careers">Carreras</a>
-        <a href="/calendar">Calendario</a>
+        <a href="/reservar">Reservar</a>
         <a href="/contact">Contacto</a>         
     </div>
 </div>
