--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,12 +6,22 @@
         <h1 class="hero-title">{{ heroTitle }}</h1>
         <p class="hero-subtitle">{{ heroSubtitle }}</p>
         <div class="hero-actions">
-          <a routerLink="/careers" class="btn">Ver Carreras</a>
+          <a routerLink="/careers" class="btn btn-secondary">Ver Carreras</a>
+          <a routerLink="/institucion" class="btn btn-secondary" >Más Informacion</a>
+          <a routerLink="/contact" class="btn btn-secondary ">Contactanos</a>
           <a routerLink="/reservar" class="btn btn-secondary">Reservar Aula</a>
         </div>
       </div>
-
   </section>
+
+  <section class="colaboracion">
+
+    <div class="colaboracion-logos">
+      <a href="https://puentes.gba.gob.ar/" target="_blank" rel="noopener noreferrer" class="logo-puentes" aria-label="Programa Puentes"></a>
+      <a href="https://dolores.gob.ar" target="_blank" rel="noopener noreferrer" class="logo-municipalidad" aria-label="Municipalidad de Dolores"></a>
+    </div>
+  </section>
+  
 
 
 </main>
