--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <body>
-  <div class="logo">
-        
-  </div>
+  <div class="logo" (click)="goHome()"></div>
+
+
 <section class="header">
     <div class="header-content">
       <!-- Logo y nombre -->
@@ -22,15 +22,42 @@
         </button>
         -->
       
-                 <ul class="nav-list">
-           <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"  (click)="closeMenu()">Inicio</a></li>
-           <li><a routerLink="/institucion" routerLinkActive="active" (click)="closeMenu()">Institución</a></li>
-           <li><a routerLink="/careers" routerLinkActive="active" (click)="closeMenu()">Carreras</a></li>
-           <li><a routerLink="/reservar" routerLinkActive="active" (click)="closeMenu()">Reservar</a></li>
-           <li><a routerLink="/contact" routerLinkActive="active" (click)="closeMenu()">Contacto</a></li>
-           <li><a routerLink="/about" routerLinkActive="active" (click)="closeMenu()">Personal</a></li>
-         </ul>
+        <ul class="nav-list">
+          <li>
+            <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="closeMenu()">
+              INICIO
+            </a>
+          </li>
+          <li>
+            <a routerLink="/careers" routerLinkActive="active" (click)="closeMenu()">
+              CARRERAS
+            </a>
+          </li>
+          <li>
+            <a routerLink="/institucion" routerLinkActive="active" (click)="closeMenu()">
+              INSTITUCIÓN
+            </a>
+          </li>
+          <li>
+            <a routerLink="/contact" routerLinkActive="active" (click)="closeMenu()">
+              CONTACTO
+            </a>
+          </li>
+          <li>
+            <a routerLink="/about" routerLinkActive="active" (click)="closeMenu()">
+              PERSONAL
+            </a>
+          </li>
+        
+          <!-- Botón destacado -->
+          <li class="nav-cta">
+            <a routerLink="/reservar" (click)="closeMenu()">
+              RESERVAR
+            </a>
+          </li>
+        </ul>
       </nav>
+      
 
       <!-- Selector de tema -->
       <div class="header-actions">
