--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* Variables CSS para modo claro */
 :root {
-  --color-principal:#76aada;
+  --color-principal:#a8cfd3;
+  --color-secundario:#1693a5;
   --logon: url(assets/images/logon.png);
   --logob: url(assets/images/logoB.png);
   --header-text:rgb(0, 0, 0);
@@ -8,7 +9,7 @@
   --blanco: #ffffff;
   --gris-claro: #f5f5f5;
   --azul-claro: #012146;
-  --gris-oscuro: #424242;
+  --gris-oscuro: #1d1c1c;
   --error: #d32f2f;
   --success: #388e3c;
   --texto-principal: #212121;
@@ -35,7 +36,7 @@
     --blue-dark-900: #0a192f;  /* Azul marino muy oscuro */
     --blue-dark-800: #112240;  
     --blue-dark-700: #1e3a5f;  
-    --blue-dark-600: #2c5282;  /* Azul fuerte */
+    --blue-dark-600: #284568;  /* Azul fuerte */
   
     /* GRISES */
     --gray-900: #171717;
@@ -68,7 +69,13 @@
   --sombra: rgba(255, 255, 255, 0.1);
 }
 */
-
+.barradivisora{
+  height: 4px;
+  width: 50%;
+  margin: 2rem auto;
+  border-radius: 2px;
+  background: var(--gray-700);
+}
 /* Estilos base */
 * {
   font-family: "Raleway", sans-serif;
