--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -6,6 +6,7 @@
     <div class="calendar-hero-content">
       <h1>Calendario de Reservas</h1>
       <p>Gestiona y reserva aulas para tus actividades académicas</p>
+      <div class="barradivisora"></div>
     </div>
   </div>
 </section>
