--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,13 +5,16 @@
       <div class="hero-content">
         <h1 class="hero-title">{{ heroTitle }}</h1>
         <p class="hero-subtitle">{{ heroSubtitle }}</p>
+
         <div class="hero-actions">
           <a routerLink="/careers" class="btn btn-secondary">Ver Carreras</a>
           <a routerLink="/institucion" class="btn btn-secondary" >Más Informacion</a>
           <a routerLink="/contact" class="btn btn-secondary ">Contactanos</a>
           <a routerLink="/reservar" class="btn btn-secondary">Reservar Aula</a>
         </div>
+
       </div>
+      <div class="barradivisora"></div>
   </section>
 
   <section class="colaboracion">
@@ -21,7 +24,7 @@
       <a href="https://dolores.gob.ar" target="_blank" rel="noopener noreferrer" class="logo-municipalidad" aria-label="Municipalidad de Dolores"></a>
     </div>
   </section>
-  
+  <div class="barradivisora"></div>
 
 
 </main>
