--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -23,7 +23,7 @@ font-family: "Raleway", sans-serif;
   padding: 0.6rem 1rem;
   font-weight: 600;
   letter-spacing: 1px;
-  color: var(--blue-dark-600) !important;
+  color: var(--blanco) !important;
   text-transform: uppercase;
   transition: color 0.3s ease;
 }
@@ -35,13 +35,13 @@ font-family: "Raleway", sans-serif;
   bottom: 0;
   width: 0%;
   height: 3px;
-  background: var(--blue-dark-600);
+  background: var(--blanco);
   transition: width 0.4s ease;
   border-radius: 2px;
 }
 
 .nav-cta a:hover {
-  color: var(--blue-dark-600);
+  color: var(--blanco);
 }
 
 .nav-cta a:hover::after {
