--- a/src/app/institucion/institucion.component.css
+++ b/src/app/institucion/institucion.component.css
@@ -8,8 +8,80 @@
   --texto-secundario: #757575;
   --sombra: rgba(0,0,0,0.1);
 }
+.contaninercarrouselpadding{
+  padding-bottom: 450px;
+}
 
 
+.containercarrousel{
+  position: relative;
+  width: 320px;
+  margin: 100px auto 0 auto;
+  perspective: 1000px;
+}
+
+.carrousel{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  animation: girar 50s infinite forwards linear;
+}
+
+.carrousel_item{
+  position:absolute;
+  width: 300px;
+  height: 187px;
+  top: 20px;
+  left: 10px;
+  right: 10px;
+  background-size: cover;
+  border: 2px solid #ffff;
+  display: flex;
+}
+
+span{
+  margin: auto;
+  font-size: 1rem;
+  background-color: #000;
+  padding: 5px;
+}
+
+.carrousel_item:nth-child(1){  
+  background-image: url("../../assets/images/aulas.webp");
+  transform: rotateY(0deg) translateZ(430px);
+} 
+.carrousel_item:nth-child(2){
+  background-image: url("../../assets/images/centro-universitario3.jpeg");
+  transform: rotateY(40deg) translateZ(430px);
+} 
+
+.carrousel_item:nth-child(3){
+  background-image: url("../../assets/images/centro-universitario2.jpeg");
+  transform: rotateY(80deg) translateZ(430px);
+} 
+
+.carrousel_item:nth-child(4){
+  background-image: url("../../assets/images/Analista.webp");
+  transform: rotateY(120deg) translateZ(430px);
+} 
+
+.carrousel_item:nth-child(5){
+  background-image: url("../../assets/images/FondoInstitucion.jpeg");
+  transform: rotateY(160deg) translateZ(430px);
+} 
+
+
+
+@keyframes girar {
+  from{
+    transform: rotateY(0deg);
+  }
+  to{
+    transform: rotateY(-450deg);
+  }
+  
+}
 
 .Muchaimg {
   margin: 0 auto;
@@ -74,6 +146,10 @@
 }
 
 @media (max-width: 480px) {
+
+  .contaninercarrouselpadding{
+    padding-bottom: 450px;
+  }
   .Muchaimg {
     width: 100%;
 
