--- a/src/app/institucion/institucion.component.html
+++ b/src/app/institucion/institucion.component.html
@@ -1,7 +1,7 @@
 <main class="InstitucionBody">
 
   <main class="about">
-    
+
     <section class="about-hero">
       <div class="container">
         <div class="about-hero-content">
@@ -10,21 +10,25 @@
         </div>
       </div>
     </section>
+    <div class="barradivisora"></div>
+    <section class="contaninercarrouselpadding">
+      <div class="containercarrousel">
+        <div class="carrousel">
+          <div class="carrousel_item"></div>
+          <div class="carrousel_item"></div>
+          <div class="carrousel_item"></div>
+          <div class="carrousel_item"></div>
+          <div class="carrousel_item"></div>
+
+
+      </div>
+      </div>
+    </section>
+
+    
 
     <!-- Bloque anti en lugar del carrusel -->
-    <div class="anti">
-        <section class="Muchaimg">
-          <img src="../../assets/images/formadores.jpeg" alt="">
-
-          <img src="../../assets/images/centro-universitario3.jpeg" alt="">
-
-          <img src="../../assets/images/centro-universitario1.png" alt="">
-          <img src="../../assets/images/aulas.webp" alt="">
-          <img src="../../assets/images/Analista.webp" alt="">
-          <img src="../../assets/images/video.gif" alt="">
-          <img src="../../assets/images/FondoInstitucion.jpeg" alt="">
-        </section>
-    </div>
+   
     <div class="barradivisora"></div>
     <!-- Historia, Misión, Visión -->
     <section class="institution-info">
@@ -36,7 +40,7 @@
         </div>
       </div>
     </section>
-  
+
     <!-- Valores -->
     <section class="values">
       <div class="container">
@@ -52,22 +56,7 @@
     </section>
     <div class="barradivisora"></div>
     <section class="institucion-slider">
-      <h2>Galería del Instituto</h2>
-      <div class="slider-container"
-           (mousedown)="onMouseDown($event)" (mousemove)="onMouseMove($event)" (mouseup)="onMouseUp()" (mouseleave)="onMouseLeave()"
-           (touchstart)="onTouchStart($event)" (touchmove)="onTouchMove($event)" (touchend)="onTouchEnd()">
-    
-        <div class="slide" *ngFor="let image of sliderImages; let i = index" [class.active]="i === currentIndex">
-          <img [src]="image.imageUrl" [alt]="image.title">
-          <div class="caption">
-            <h3>{{ image.title }}</h3>
-            <p>{{ image.description }}</p>
-          </div>
-        </div>
-    
-        <button class="prev" (click)="prevSlide()">&#10094;</button>
-        <button class="next" (click)="nextSlide()">&#10095;</button>
-      </div>
+
     </section>
     
   </main>
