--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,11 @@
   --sombra: rgba(255, 255, 255, 0.1);
 }
 */
+
+html {
+  scroll-behavior: smooth;
+}
+
 .barradivisora{
   height: 4px;
   width: 50%;
